[gd_scene load_steps=14 format=3 uid="uid://1xelpqk8dimq"]

[ext_resource type="Script" path="res://script/Peterchy.gd" id="1_ol56o"]
[ext_resource type="Texture2D" uid="uid://bswrev6khkk2b" path="res://assets/GFX/Enemies/Peterchy.png" id="2_bepwh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rngw6"]
size = Vector2(30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_vg8w2"]
atlas = ExtResource("2_bepwh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h844a"]
atlas = ExtResource("2_bepwh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0m2u"]
atlas = ExtResource("2_bepwh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_abrin"]
atlas = ExtResource("2_bepwh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_odtni"]
atlas = ExtResource("2_bepwh")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2ivsl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vg8w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h844a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0m2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abrin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odtni")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_mshq7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2dg6r"]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f4ok5"]
_data = {
"RESET": SubResource("Animation_mshq7"),
"hit": SubResource("Animation_2dg6r")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qt2l5"]
size = Vector2(26, 26)

[node name="Peterchy" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_ol56o")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rngw6")
debug_color = Color(6.73831e-07, 0.6013, 0.692449, 0.42)

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2ivsl")
frame_progress = 0.660521

[node name="HitAnim" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_f4ok5")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(16, 0)

[node name="ChangeDirectionTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_qt2l5")
debug_color = Color(0.951144, 0.0185715, 0.55594, 0.42)

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_change_direction_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
